Funcionando com sucesso!!

--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,15 @@
 .fonte {
     color: #436b5c;
 }
+.fonte_tam {
+    font-size: 22px;
+}
+.fonte_tam2 {
+    font-size: 14px;
+}
 
 .btn_menu {
-    padding: 30px;
+    padding: 20px;
 }
 
 .fonte_menu {
